@@ -1,6 +1,6 @@
 AC_INIT(src/Makefile.am)
 
-AM_INIT_AUTOMAKE(devhelp, 0.4.99)
+AM_INIT_AUTOMAKE(devhelp, 0.5.0)
 AM_CONFIG_HEADER(config.h)
 
 AM_SANITY_CHECK
