@@ -1,7 +1,5 @@
 dtddir = $(datadir)/devhelp/dtd
 dtd_DATA = 					\
-	devhelp-1.dtd				\
-	dhb-metadata-1.dtd			\
-	dhb-contents-1.dtd			\
-	dhb-keywords-1.dtd			\
-	dhs-1.dtd				
+	devhelp-1.dtd
+
+EXTRA_DIST =  $(dtd_DATA)
